--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required (VERSION 2.6)
 
 project (AsciiTanksServer)
-set(SERVER_SOURCES "common/connection.c")
+set(SERVER_SOURCES common/connection.c)
+set(SERVER_SOURCES ${SERVER_SOURCES} server/main.c)
 add_executable (AsciiTanksServer ${SERVER_SOURCES})
