--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,12 @@
 cmake_minimum_required (VERSION 2.6)
 
-project (AsciiTanksServer)
-set(SERVER_SOURCES common/listening.c)
+project (AsciiTanksServer C)
+set(SERVER_SOURCES)
+set(SERVER_SOURCES ${SERVER_SOURCES} common/listening.c)
 set(SERVER_SOURCES ${SERVER_SOURCES} server/main.c)
+
+set(LIBS)
+set(LIBS ${LIBS} "pthread")
 add_executable (AsciiTanksServer ${SERVER_SOURCES})
+
+target_link_libraries (AsciiTanksServer ${LIBS}) 
