Added client code and cmake definitions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,16 @@ set(LIBS ${LIBS} "pthread")
 add_executable (AsciiTanksServer ${SERVER_SOURCES})
 
 target_link_libraries (AsciiTanksServer ${LIBS}) 
+
+
+
+project (AsciiTanks C)
+set(CLIENT_SOURCES)
+set(CLIENT_SOURCES ${CLIENT_SOURCES} common/messaging.c)
+set(CLIENT_SOURCES ${CLIENT_SOURCES} client/main.c)
+
+set(LIBS)
+set(LIBS ${LIBS} "pthread")
+add_executable (AsciiTanks ${CLIENT_SOURCES})
+
+target_link_libraries (AsciiTanks ${LIBS}) 
