--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required (VERSION 2.6)
 project (AsciiTanksServer C)
 set(SERVER_SOURCES)
 set(SERVER_SOURCES ${SERVER_SOURCES} common/listening.c)
+set(SERVER_SOURCES ${SERVER_SOURCES} common/messaging.c)
 set(SERVER_SOURCES ${SERVER_SOURCES} server/main.c)
 
 set(LIBS)
