--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ target_link_libraries (AsciiTanksServer ${LIBS})
 project (AsciiTanks C)
 set(CLIENT_SOURCES)
 set(CLIENT_SOURCES ${CLIENT_SOURCES} common/messaging.c)
+set(CLIENT_SOURCES ${CLIENT_SOURCES} client/gfx.c)
 set(CLIENT_SOURCES ${CLIENT_SOURCES} client/main.c)
 
 set(LIBS)
