--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,10 +18,12 @@ project (AsciiTanks C)
 set(CLIENT_SOURCES)
 set(CLIENT_SOURCES ${CLIENT_SOURCES} common/messaging.c)
 set(CLIENT_SOURCES ${CLIENT_SOURCES} client/gfx.c)
+set(CLIENT_SOURCES ${CLIENT_SOURCES} client/kbd.c)
 set(CLIENT_SOURCES ${CLIENT_SOURCES} client/main.c)
 
 set(LIBS)
 set(LIBS ${LIBS} "pthread")
+set(LIBS ${LIBS} "ncurses")
 add_executable (AsciiTanks ${CLIENT_SOURCES})
 
 target_link_libraries (AsciiTanks ${LIBS}) 
