ASCII is not here :(

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,10 @@ target_link_libraries (AsciiTanksServer ${LIBS})
 project (AsciiTanks C)
 set(CLIENT_SOURCES)
 set(CLIENT_SOURCES ${CLIENT_SOURCES} common/messaging.c)
+set(CLIENT_SOURCES ${CLIENT_SOURCES} common/game/map.c)
 set(CLIENT_SOURCES ${CLIENT_SOURCES} client/gfx.c)
 set(CLIENT_SOURCES ${CLIENT_SOURCES} client/kbd.c)
+set(CLIENT_SOURCES ${CLIENT_SOURCES} client/map_draw.c)
 set(CLIENT_SOURCES ${CLIENT_SOURCES} client/main.c)
 
 set(LIBS)
